--- a/_example/Makefile
+++ b/_example/Makefile
@@ -1,3 +1,3 @@
 bench:
 	go test -exec benchlog -run XXX -bench .
-	@printf "\n\n*** Now check .bench.log ***\n"
+	@printf "\n\n*** Now check .benchlog ***\n"
